[gd_scene load_steps=3 format=3 uid="uid://dysitl63kqsof"]

[ext_resource type="PackedScene" uid="uid://d2shs2l8i6syh" path="res://forest/items/casette.tscn" id="1_866f6"]
[ext_resource type="Script" path="res://forest/items/casette_ui.gd" id="1_v1lxb"]

[node name="CasetteUI" type="Control"]
custom_minimum_size = Vector2(90, 50)
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
script = ExtResource("1_v1lxb")

[node name="Casette" parent="." instance=ExtResource("1_866f6")]

[connection signal="started" from="Casette" to="." method="_on_casette_started"]
[connection signal="stopped" from="Casette" to="." method="_on_casette_stopped"]
